Update implementation proposal: add Algebra course, update nomenclature to Mk/Fk, and detail MSLQ short version instrument

--- a/versions-latex-tex/Fisica_para_Mates_Propuesta_de_Implementacion/propuesta-implementacion-1.tex
+++ b/versions-latex-tex/Fisica_para_Mates_Propuesta_de_Implementacion/propuesta-implementacion-1.tex
@@ -133,8 +133,8 @@ Dependiendo de la evaluación de esta primera experiencia, el proyecto puede esc
 \rockbottomsupertiny{Simul. 3D} &
 \rockbottomshort{Sugerida} \\
 \midrule
-Cinemática 1 (4.1)   &   &   &   & X &   & X &   &   &   & X & X & 1 \\
-Balística 1 (4.2)    & X & X & X &   &   & X &   &   &   & X & X & 1 \\
+Cinemática 1 (4.1)   &   &   &   & X &   & X &   &   &   & X & X & 0 \\
+Balística 1 (4.2)    & X & X & X &   &   & X &   &   &   & X & X & 0 \\
 Balística 2 (4.3)    & X & X & X &   &   & X &   &   &   & X & X & 1 \\
 Balística 3 (4.4)    &   & X & X &   &   & X &   &   &   & X & X & 1 \\
 Sólido Rev. 1 (4.5)  & X & X & X &   &   & X & X & X &   & X & X & 1 \\
@@ -147,6 +147,7 @@ Sólido Rev. 2 (5.1)  &   & X & X &   & X & X & X & X &   &   & X & 3 \\
 \vspace{0.3cm}
 \noindent\textbf{Asignatura sugerida:}
 \begin{itemize}
+  \item[0:] Álgebra
   \item[1:] Geometría
   \item[2:] Taller de Física I (en articulación con Introducción al Cálculo)
   \item[3:] Cálculo Diferencial
@@ -160,6 +161,17 @@ En este documento nos centraremos en los problemas 4.1--4.5 y 5.1, articulados e
 %======================================================================
 
 \section{Cursos involucrados y carga horaria}
+
+\subsection*{Álgebra}
+
+\begin{itemize}
+\item Geometría:
+\begin{itemize}
+\item Curso del de primer año, bimestral, entre marzo y abril. 
+\item Clases de 140 minutos, de lunes a viernes, durante 8 semanas.
+\item Para esta propuesta se utilizarán sesiones de 140 minutos, agendadas al final del primer módulo del curso (de un total de 2). 
+\end{itemize}
+\end{itemize}
 
 \subsection*{Geometría}
 
@@ -177,12 +189,12 @@ En este documento nos centraremos en los problemas 4.1--4.5 y 5.1, articulados e
   \item Para esta propuesta se utilizarán sesiones de 140 minutos, agendadas en las \textbf{primeras semanas} del semestre en que se dicta el Taller (inmediatamente después de Geometría).
 \end{itemize}
 
-\subsection*{Estructura G / F}
+\subsection*{Estructura M / F}
 
 Definiremos como sesiones de \textbf{140 minutos obligatorias}:
 
 \begin{itemize}
-  \item \textbf{Gk}: sesiones realizadas en \textbf{Geometría} (ej.: G1, G2, G3, G4).
+  \item \textbf{Mk}: sesiones realizadas en el área de \textbf{Matemática} (Álgebra o Geometría) (ej.: M1, M2, M3, M4).
   \item \textbf{Fk}: sesiones realizadas en \textbf{Taller de Física I} (ej.: F1, F2, F3).
 \end{itemize}
 
@@ -194,26 +206,26 @@ Con el propósito de aumentar la cartera de posibilidades para ejecutar el prese
 
 \subsection{Versión mínima (4 sesiones)}
 
-Pensada como piloto de baja carga, con dos sesiones en Geometría y una en Física.
+Pensada como piloto de baja carga, con una sesión en Álgebra, dos sesiones en Geometría y una en Física.
 
 \begin{itemize}
-\item G1:
+\item \textbf{Álgebra} (M1):
 \begin{itemize}
 \item Aplicación de cuestionario de motivación y estrategias de estudio \textbf{(pre–test)}.
 \item Problema \textbf{Cinemática 1: frenada de emergencia}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item G2:
+\item \textbf{Geometría} (M2):
 \begin{itemize}
 \item Problema \textbf{Balística 2: el desafío del arquero}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item G3:
+\item \textbf{Geometría} (M3):
 \begin{itemize}
 \item Problema \textbf{Balística 3: la bola en la escalera}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item F1:
+\item \textbf{Taller de Física I} (F1):
 \begin{itemize}
 \item Breve repaso de proyectiles y conexión con las sesiones de Geometría.
 \item Problema \textbf{Sólido de revolución 1 (cono)}.
@@ -227,39 +239,39 @@ Pensada como piloto de baja carga, con dos sesiones en Geometría y una en Físi
 Versión extendida, con todos los problemas disponibles y una sesión de cierre.
 
 \begin{itemize}
-\item G1:
+\item \textbf{Álgebra} (M1):
 \begin{itemize}
 \item Cuestionario pre–test.
 \item \textbf{Cinemática 1}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item G2:
+\item \textbf{Álgebra} (M2):
 \begin{itemize}
 \item \textbf{Balística 1: rescate de la pelota}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item G3:
+\item \textbf{Geometría} (M3):
 \begin{itemize}
 \item \textbf{Balística 2: desafío del arquero}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item G4:
+\item \textbf{Geometría} (M4):
 \begin{itemize}
 \item \textbf{Balística 3: bola en la escalera}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item F1:
+\item \textbf{Taller de Física I} (F1):
 \begin{itemize}
 \item Conexión entre proyectiles y movimiento circular.
 \item \textbf{Sólido de revolución 1 (cono)}.
 \item Mini–evaluación individual.
 \end{itemize}
-\item F2:
+\item \textbf{Taller de Física I} (F2):
 \begin{itemize}
 \item \textbf{Sólido de revolución 2}: superficies de revolución (paraboloide, esfera, hiperbola, elipse).
 \item Mini–evaluación individual.
 \end{itemize}
-\item F3:
+\item \textbf{Taller de Física I} (F3):
 \begin{itemize}
 \item Cierre del proyecto: revisión integradora de todos los problemas.
 \item Mini–evaluación integradora.
@@ -273,7 +285,7 @@ Versión extendida, con todos los problemas disponibles y una sesión de cierre.
 
 Todas las sesiones especiales se imparten como \textbf{clases dobles de 140 minutos}, con estudiantes trabajando en grupos de tres, cada grupo con acceso a un computador con conexión a las simulaciones.
 
-A continuación se describen las fases de una sesión tipo Gk/Fk (exceptuando las partes de pre/post–test, que se detallan más adelante):
+A continuación se describen las fases de una sesión tipo Mk/Fk (exceptuando las partes de pre/post–test, que se detallan más adelante):
 
 \section{Fases de la sesión}
 
@@ -336,7 +348,7 @@ El profesor a cargo debe cronometrar cada etapa y ser riguroso con los minutos a
 
 \section{Productos evaluados en cada sesión}
 
-Cada sesión Gk o Fk genera dos productos evaluados (pueden ver la hoja de ejercicios que verán los alumnos en en archivo \texttt{Fisica\_para\_Mates\_AO\_v2-alumnos.pdf}, además de ver el banco de ejercicios para la mini-evaluación en la sección \ref{Banco de Ítems}):
+Cada sesión Mk o Fk genera dos productos evaluados (pueden ver la hoja de ejercicios que verán los alumnos en en archivo \texttt{Fisica\_para\_Mates\_AO\_v2-alumnos.pdf}, además de ver el banco de ejercicios para la mini-evaluación en la sección \ref{Banco de Ítems}):
 
 \begin{enumerate}
 \item \textbf{Hoja de desarrollo grupal (50\% de la sesión)} 
@@ -355,9 +367,9 @@ Cada sesión Gk o Fk genera dos productos evaluados (pueden ver la hoja de ejerc
 
 La nota de la sesión es el promedio de ambos entregables.
 
-\section{Integración en Geometría}
+\section{Integración en cursos de Matemática}
 
-La ponderación oficial de Geometría contempla:
+La ponderación oficial de los cursos de Matemática (Álgebra y Geometría) contempla:
 
 \begin{center}
 \begin{tabular}{@{}lc@{}}
@@ -375,7 +387,7 @@ Examen & 30\% \\
 \end{tabular}
 \end{center}
 
-En esta propuesta, la nota de \textbf{Tareas (10\%)} se reemplaza por el promedio de las notas de sesiones Gk. No se modifica la ponderación global del curso, sólo se redefine el contenido de la categoría ``Tareas’’.
+En esta propuesta, la nota de \textbf{Tareas (10\%)} se reemplaza por el promedio de las notas de sesiones Mk. No se modifica la ponderación global del curso, sólo se redefine el contenido de la categoría ``Tareas’’.
 
 \section{Integración en Taller de Física I}
 
@@ -404,8 +416,28 @@ En esta propuesta, el proyecto \textit{Física para Mates} se integra dentro de 
 \end{itemize}
 
 %======================================================================
-\chapter{Medición de motivación y estrategias de aprendizaje}
+\chapter{Herramienta para medir Motivación}
 %======================================================================
+
+Puedo adaptar el MSLQ (Motivated Strategies for Learning Questionnaire) para ``Física para Mates'' porque el instrumento no mide contenidos específicos de una asignatura, sino constructos generales de motivación para el aprendizaje (valoración de la tarea, expectativas/autoeficacia y componente afectivo como ansiedad ante evaluaciones). Eso lo hace portable: basta con contextualizar la redacción (``este curso'', ``esta asignatura'') a Física para Mates y mantener el formato de respuesta.
+
+Además, en el estudio chileno de Inzunza et al. se observa que, empíricamente, los ítems de motivación tienden a organizarse en tres dimensiones amplias (valoración, expectativas y afecto/ansiedad), lo que permite una versión más corta para encuestas aplicadas en clase. Para mi proyecto, esto es clave porque necesito un instrumento breve y aplicable más de una vez (diagnóstico y seguimiento) sin fatigar a los estudiantes.
+
+\textbf{Alcances y resguardos:}
+\begin{enumerate}
+    \item La adaptación debe ser mínima: mantener el sentido de cada ítem, el período de referencia (curso actual) y la escala Likert original.
+    \item No puedo asumir que la estructura factorial se replicará idéntica; por eso haré validación interna en mi muestra (consistencia interna y EFA/CFA) y, si algún ítem funciona mal, lo ajustaré o excluiré con criterios transparentes.
+    \item La ``motivación'' puede reportarse por subdimensiones (valor, expectativas, ansiedad) y no solo como un puntaje global, porque la ansiedad suele comportarse distinto y es interpretativamente relevante en un curso de física.
+    \item Si el objetivo es comparar con estudios que usan el MSLQ completo, la comparabilidad será parcial (por usar versión abreviada), pero para análisis interno del proyecto (antes/después, diferencias por grupo, relación con desempeño) la versión corta es adecuada.
+\end{enumerate}
+
+En resumen: sí se puede adaptar, porque el constructo es general y el contexto es cambiable, pero hay que hacerlo con cautela metodológica y validación en la muestra del curso.
+
+\textbf{Referencias Clave:}
+\begin{itemize}
+    \item Inzunza, B., Pérez, C., Márquez, C., Ortiz, L., Marcellini, S., \& Duk, S. (2018). Estructura factorial y confiabilidad del Cuestionario de Motivación y Estrategias de Aprendizaje (MSLQ) en estudiantes universitarios chilenos de primer año. \textit{Revista Iberoamericana de Diagnóstico y Evaluación}, 47(2), 21–35. \url{https://doi.org/10.21865/RIDEP47.2.02}
+    \item Pintrich, P. R., Smith, D. A. F., Garcia, T., \& McKeachie, W. J. (1991). \textit{A manual for the use of the Motivated Strategies for Learning Questionnaire (MSLQ)}. National Center for Research to Improve Postsecondary Teaching and Learning, University of Michigan.
+\end{itemize}
 
 \section{Instrumento}
 
@@ -435,20 +467,109 @@ En su versión completa, el instrumento contiene alrededor de 80 ítems tipo Lik
 \subsection*{Versión mínima}
 
 \begin{itemize}
-\item \textbf{Pre–test}: al inicio de la sesión G1 (primeros 15–20 minutos), o durante la clase anterior.
-\item \textbf{Consentimiento}: al inicio de la sesión G1, se les presentará consentimiento informado dando a conocer los alcances de la actividad (primeros 15–20 minutos).
+\item \textbf{Pre–test}: al inicio de la sesión M1 (primeros 15–20 minutos), o durante la clase anterior.
+\item \textbf{Consentimiento}: al inicio de la sesión M1, se les presentará consentimiento informado dando a conocer los alcances de la actividad (primeros 15–20 minutos).
 \item \textbf{Post–test}: al final de la sesión F1 (últimos 15–20 minutos).
 \end{itemize}
 
 \subsection*{Versión completa}
 
 \begin{itemize}
-\item \textbf{Pre–test}: al inicio de la sesión G1 (primeros 15–20 minutos), o durante la clase anterior.
-\item \textbf{Consentimiento}: al inicio de la sesión G1, se les presentará consentimiento informado dando a conocer los alcances de la actividad (primeros 15–20 minutos).
+\item \textbf{Pre–test}: al inicio de la sesión M1 (primeros 15–20 minutos), o durante la clase anterior.
+\item \textbf{Consentimiento}: al inicio de la sesión M1, se les presentará consentimiento informado dando a conocer los alcances de la actividad (primeros 15–20 minutos).
 \item \textbf{Post–test}: durante la sesión F3 (parte inicial o final), en conjunto con la mini–evaluación integradora.
 \end{itemize}
 
 Los resultados del cuestionario no afectan la nota de los estudiantes en ningún caso. Esta información se utilizará para monitorear cambios en la \textbf{motivación} y \textbf{estrategias de estudio} frente al uso de simulaciones y problemas contextualizados; y alimentar investigaciones posteriores sobre enseñanza de Matemática y Física en Ingeniería.
+
+\section{Estrategia para medir motivación (versión corta basada en Inzunza)}
+
+\subsection{Objetivo}
+Construir una medida breve de ``motivación académica'' usando solo los ítems que, en la adaptación chilena reportada por Inzunza, conforman los 3 factores motivacionales (valoración, expectativas y afecto/ansiedad), y luego validar internamente esa estructura en la muestra.
+
+\subsection{Decisión de instrumento}
+Usaremos los factores motivacionales identificados por Inzunza:
+\begin{itemize}
+    \item \textbf{F1}: Valor de la tarea (valoración).
+    \item \textbf{F3}: Expectativas.
+    \item \textbf{F8}: Ansiedad (afecto).
+\end{itemize}
+
+El total de ítems a aplicar es de 28 ítems (F1=9, F3=14, F8=5). Esta decisión prioriza brevedad, a costa de renunciar a la estructura ``clásica'' de 6 subescalas del MSLQ original.
+
+\subsection{Banco de ítems}
+
+\subsubsection*{A) Motivación — F1. Valor de la tarea (9 ítems)}
+Ítems: 27, 17, 26, 23, 10, 4, 22, 7, 24.
+
+\begin{enumerate}
+    \item[27.] Entender las materias de este curso es muy importante para mí.
+    \item[17.] Estoy muy interesado en el contenido de este curso.
+    \item[26.] Me gustan los temas de este curso.
+    \item[23.] Pienso que para mí es útil aprender las materias de este curso.
+    \item[10.] Es importante para mí aprender las materias de este curso.
+    \item[4.] Creo que sacaré una excelente nota en este curso.
+    \item[22.] Lo más satisfactorio para mí en este curso es tratar de entender el contenido tan profundamente como sea posible.
+    \item[7.] Obtener una buena nota en este curso es una de las cosas más satisfactorias para mí en este momento.
+    \item[24.] Cuando tengo la oportunidad en este curso elijo tareas de las cuales puedo aprender aun cuando no me aseguren una buena nota.
+\end{enumerate}
+
+\subsubsection*{B) Motivación — F3. Expectativas (14 ítems)}
+Ítems: 15, 18, 20, 13, 6, 12, 29, 9, 25, 1, 2, 31, 16, 5.
+
+\begin{enumerate}
+    \item[15.] Tengo confianza en que entenderé los materiales más complejos presentados por el profesor.
+    \item[18.] Si me esfuerzo lo suficiente entenderé los contenidos de este curso.
+    \item[20.] Tengo confianza que puedo hacer un excelente trabajo en las tareas y pruebas de este curso.
+    \item[13.] Si puedo quiero obtener mejores notas en esta clase que la mayoría de los estudiantes.
+    \item[6.] Estoy seguro que puedo entender las materias más difíciles que se presentan en las lecturas para este curso.
+    \item[12.] Tengo confianza en que puedo aprender los conceptos básicos enseñados en este curso.
+    \item[29.] Estoy seguro de que puedo dominar las habilidades que se enseñan en esta clase.
+    \item[9.] Si no aprendo las materias de este curso es mi propia responsabilidad.
+    \item[25.] Si no entiendo la materia de este curso es porque no intento lo suficiente.
+    \item[1.] En este curso prefiero materiales que me desafíen y de este modo aprender nuevas cosas.
+    \item[2.] Si estudio en la forma apropiada podré aprender el material o contenido de esta asignatura.
+    \item[31.] Considerando la dificultad de este curso, el (la) profesor(a) y mis habilidades pienso que me irá bien.
+    \item[16.] En un curso como este prefiero materiales que estimulen mi curiosidad aun cuando sean difíciles de aprender.
+    \item[5.] Creo que sacaré una excelente nota en este curso.
+\end{enumerate}
+
+\subsubsection*{C) Motivación — F8. Ansiedad (5 ítems)}
+Ítems: 28, 19, 14, 3, 11.
+
+\begin{enumerate}
+    \item[28.] Siento que mi corazón se acelera cuando doy una prueba.
+    \item[19.] Tengo una sensación de ansiedad y malestar cuando doy una prueba.
+    \item[14.] Cuando doy una prueba pienso en las consecuencias de que me vaya mal.
+    \item[11.] Lo más importante para mí ahora es subir mi promedio general de manera que mi principal interés en este curso es obtener una buena nota.
+\end{enumerate}
+
+\subsection{Validación interna y estimación de tiempo}
+
+\textbf{Validación interna (plan mínimo)}
+En la muestra, ejecutar:
+\begin{enumerate}
+    \item Revisión de calidad de datos: faltantes, distribuciones, piso/techo por ítem.
+    \item Consistencia interna por factor: alfa/omega + correlaciones ítem-total.
+    \item EFA/CFA (idealmente CFA si ya asumes 3 factores):
+    \begin{itemize}
+        \item Modelo 3 factores: F1, F3, F8.
+        \item Revisar cargas y correlaciones entre factores.
+    \end{itemize}
+    \item Reglas de depuración:
+    \begin{itemize}
+        \item Ítems con carga baja o ítem-total bajo: candidatos a eliminación.
+        \item Atención especial a ítems 3 y 11 (en Inzunza aparecen asociados a Ansiedad; en otros marcos no son ``ansiedad'' pura).
+    \end{itemize}
+    \item Reporte: (i) versión final, (ii) evidencia de fiabilidad, (iii) evidencia de estructura interna.
+\end{enumerate}
+
+\textbf{Estimación de tiempo de respuesta}
+Supuesto: formato Likert (p.ej., 1–5) y aplicación autoadministrada.
+\begin{itemize}
+    \item 28 ítems $\times$ 20 segundos por ítem $\approx$ 10 minutos.
+    \item + instrucciones iniciales (30–60 s) $\approx$ 5 a 8 minutos total.
+\end{itemize}
 
 %======================================================================
 \chapter{Requerimientos logísticos}
